--- a/datastructure1/list.ipynb
+++ b/datastructure1/list.ipynb
@@ -916,184 +916,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "11\n",
-      "13\n",
-      "17\n",
-      "19\n",
-      "23\n",
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n",
-      "53\n",
-      "59\n",
-      "61\n",
-      "67\n",
-      "71\n",
-      "73\n",
-      "79\n",
-      "83\n",
-      "89\n",
-      "97\n",
-      "101\n",
-      "103\n",
-      "107\n",
-      "109\n",
-      "113\n",
-      "127\n",
-      "131\n",
-      "137\n",
-      "139\n",
-      "149\n",
-      "151\n",
-      "157\n",
-      "163\n",
-      "167\n",
-      "173\n",
-      "179\n",
-      "181\n",
-      "191\n",
-      "193\n",
-      "197\n",
-      "199\n",
-      "211\n",
-      "223\n",
-      "227\n",
-      "229\n",
-      "233\n",
-      "239\n",
-      "241\n",
-      "251\n",
-      "257\n",
-      "263\n",
-      "269\n",
-      "271\n",
-      "277\n",
-      "281\n",
-      "283\n",
-      "293\n",
-      "307\n",
-      "311\n",
-      "313\n",
-      "317\n",
-      "331\n",
-      "337\n",
-      "347\n",
-      "349\n",
-      "353\n",
-      "359\n",
-      "367\n",
-      "373\n",
-      "379\n",
-      "383\n",
-      "389\n",
-      "397\n",
-      "401\n",
-      "409\n",
-      "419\n",
-      "421\n",
-      "431\n",
-      "433\n",
-      "439\n",
-      "443\n",
-      "449\n",
-      "457\n",
-      "461\n",
-      "463\n",
-      "467\n",
-      "479\n",
-      "487\n",
-      "491\n",
-      "499\n",
-      "503\n",
-      "509\n",
-      "521\n",
-      "523\n",
-      "541\n",
-      "547\n",
-      "557\n",
-      "563\n",
-      "569\n",
-      "571\n",
-      "577\n",
-      "587\n",
-      "593\n",
-      "599\n",
-      "601\n",
-      "607\n",
-      "613\n",
-      "617\n",
-      "619\n",
-      "631\n",
-      "641\n",
-      "643\n",
-      "647\n",
-      "653\n",
-      "659\n",
-      "661\n",
-      "673\n",
-      "677\n",
-      "683\n",
-      "691\n",
-      "701\n",
-      "709\n",
-      "719\n",
-      "727\n",
-      "733\n",
-      "739\n",
-      "743\n",
-      "751\n",
-      "757\n",
-      "761\n",
-      "769\n",
-      "773\n",
-      "787\n",
-      "797\n",
-      "809\n",
-      "811\n",
-      "821\n",
-      "823\n",
-      "827\n",
-      "829\n",
-      "839\n",
-      "853\n",
-      "857\n",
-      "859\n",
-      "863\n",
-      "877\n",
-      "881\n",
-      "883\n",
-      "887\n",
-      "907\n",
-      "911\n",
-      "919\n",
-      "929\n",
-      "937\n",
-      "941\n",
-      "947\n",
-      "953\n",
-      "967\n",
-      "971\n",
-      "977\n",
-      "983\n",
-      "991\n",
-      "997\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for num  in range(2,1000):\n",
@@ -1117,31 +942,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prime numbers between 900 and 1000 are:\n",
-      "907\n",
-      "911\n",
-      "919\n",
-      "929\n",
-      "937\n",
-      "941\n",
-      "947\n",
-      "953\n",
-      "967\n",
-      "971\n",
-      "977\n",
-      "983\n",
-      "991\n",
-      "997\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lower=900\n",
     "upper=1000\n",
@@ -1155,11 +958,6 @@
     "        else:\n",
     "            print(num)    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1306,14 +1104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['August', 'Freddy', 'Jerry', 'Samus', 'Alex', 'Desmond']\n"
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\list.ipynb Cell 59\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000059?line=0'>1</a>\u001b[0m names\u001b[39m.\u001b[39mreverse()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000059?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(names)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
      ]
     }
    ],
@@ -1324,14 +1126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Alex', 'August', 'Desmond', 'Freddy', 'Jerry', 'Samus']\n"
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\list.ipynb Cell 60\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000060?line=0'>1</a>\u001b[0m names\u001b[39m.\u001b[39msort()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000060?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(names)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
      ]
     }
    ],
@@ -1416,9 +1222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\list.ipynb Cell 65\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000065?line=0'>1</a>\u001b[0m backup\u001b[39m=\u001b[39mnames\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
+     ]
+    }
+   ],
    "source": [
     "backup=names #reference to the same list"
    ]
@@ -1503,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1526,6 +1344,15 @@
     "print(x)\n",
     "x.sort(reverse=True)#reverse in descending order\n",
     "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
