--- a/datastructure1/tuplesetdictionary.ipynb
+++ b/datastructure1/tuplesetdictionary.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,8 +117,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1.0, (1, 2, 3), 'Oye'}\n"
+      "{1.0, 'Oye', (1, 2, 3)}\n"
      ]
     }
    ],
@@ -156,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +213,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\tuplesetdictionary.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/tuplesetdictionary.ipynb#ch0000010?line=0'>1</a>\u001b[0m my_set\u001b[39m=\u001b[39m{\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,[\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m]}\n",
+      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\tuplesetdictionary.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/tuplesetdictionary.ipynb#ch0000010?line=0'>1</a>\u001b[0m my_set\u001b[39m=\u001b[39m{\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,[\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m]}\u001b[39m# set cannot have mutable items\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/tuplesetdictionary.ipynb#ch0000010?line=1'>2</a>\u001b[0m \u001b[39m#here[3,4] is a mutable list\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/tuplesetdictionary.ipynb#ch0000010?line=2'>3</a>\u001b[0m \u001b[39m#this will cause an error\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/tuplesetdictionary.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(my_set)\n",
       "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
@@ -214,12 +221,12 @@
    "source": [
     "my_set={1,2,[3,4]}# set cannot have mutable items\n",
     "#here[3,4] is a mutable list\n",
-    "#this will cause an error"
+    "#this will cause an error\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -231,15 +238,16 @@
     }
    ],
    "source": [
+    "#empty set\n",
     "#initialize a with set()\n",
     "a=set()\n",
-    "#check datatype of a\n",
+    "#check data type of a\n",
     "print(type(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -298,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 3, 4, 5, 6, 8}\n"
+      "{1, 2, 3, 4, 5, 6, 8}\n"
      ]
     }
    ],
@@ -318,21 +326,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([4, 5], {8, 1, 6})\n"
+      "{1, 3, 4, 5, 6}\n"
      ]
     }
    ],
    "source": [
-    "#add list and set\n",
-    "#Output:{1,2,3,4,5,6,8}\n",
-    "my_set=([4,5],{1,6,8})\n",
+    "# initialize my_set\n",
+    "my_set={1,3,4,5,6}\n",
+    "print(my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#discard an element\n",
+    "#Output:{1,3,5,6}\n",
+    "my_set.discard(4)\n",
     "print(my_set)"
    ]
   },
@@ -345,12 +372,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 3, 5, 6}\n"
+      "{1, 3, 5}\n"
      ]
     }
    ],
    "source": [
-    "my_set.discard(4)\n",
+    "#removing an element\n",
+    "#Output:{1,3,5}\n",
+    "my_set.remove(6)\n",
+    "print(my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pops a random item\n",
+    "my_set.pop()\n",
     "print(my_set)"
    ]
   },
@@ -363,46 +411,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 3, 5}\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_set.remove(6)\n",
-    "print(my_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_set.pop()\n",
-    "print(my_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "set()\n"
      ]
     }
    ],
    "source": [
+    "#clear my_set\n",
+    "#Output:set()\n",
     "my_set.clear()\n",
     "print(my_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +434,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#use - operator on A\n",
+    "#output:{1,2,3}\n",
+    "print(A-B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#use difference function on A\n",
+    "A.difference(B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#use ^ operation\n",
+    "#output:{1,2,3,6,7,8}\n",
+    "print(A^B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 6, 7, 8}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#use symmetric_difference\n",
+    "A.symmetric_difference(B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -424,12 +526,13 @@
     }
    ],
    "source": [
+    "#union\n",
     "print(A|B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +541,7 @@
        "{1, 2, 3, 4, 5, 6, 7, 8}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +561,7 @@
        "{1, 2, 3, 4, 5, 6, 7, 8}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +581,7 @@
        "{4, 5}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +618,7 @@
        "{4, 5}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,81 +629,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(A-B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{8, 6, 7}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(B-A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2, 3}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A.difference(B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{6, 7, 8}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B.difference(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4, 5}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.intersection(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -641,24 +690,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
    "source": [
     "x=set()\n",
-    "n=int(input('ENTER NO. OF ELEMENTS'))\n",
     "for i in range(10):\n",
-    "    numbers.append(n)\n",
-    "    print\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2"
+    "    val=int(input('Enter a number'))\n",
+    "    x.add(val)\n",
+    "print(x)\n"
    ]
   }
  ],
