--- a/datastructure1/dictionary.ipynb
+++ b/datastructure1/dictionary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alan\n",
+      "Brian\n",
+      "['Frank', 90]\n",
+      "['Alan', 32, 45, 57, 78, 88, 45]\n",
+      "['Brian', 23, 12, 34]\n"
+     ]
+    }
+   ],
    "source": [
     "print(marks_list[0])\n",
     "print(marks_list[2])\n",
@@ -33,9 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alan\n",
+      "30\n",
+      "Brian\n",
+      "50\n",
+      "Charles\n",
+      "60\n",
+      "David\n",
+      "70\n",
+      "Eric\n",
+      "88\n",
+      "Frank\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
     "for item in marks_list_v2:\n",
     "    print(item[0])\n",
@@ -52,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 30, 'Brian': 50, 'Charles': 60, 'David': 70, 'Eric': 80, 'Frank': 90}\n"
+     ]
+    }
+   ],
    "source": [
     "marks_dict={'Alan':30,'Brian':50,'Charles':60,'David':70,'Eric':80,'Frank':90}\n",
     "print(marks_dict)"
@@ -62,9 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles got 60 marks\n",
+      "We are adding grace marks for Alan\n",
+      "New marks for Alan is  45\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Charles got\",marks_dict['Charles'],'marks')#get value of Charles\n",
     "print(\"We are adding grace marks for Alan\")\n",
@@ -74,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Alan', 'cgpa': 8.3}\n",
+      "Alan\n",
+      "7.5\n"
+     ]
+    }
+   ],
    "source": [
     "print(marks_dict_v2['student 1'])\n",
     "print(marks_dict_v2['student 1']['name'])\n",
@@ -120,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Inception': {'year': 2010, 'rating': 8.9, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.', 'studio': 'Warner Bros'}, 'The Dark knight': {'year': 2008, 'rating': 9.0, 'overview': 'Batman vs Joker.'}, 'Interseller': {'year': 2014, 'rating': 8.6, 'overview': \"it's complicated\"}}\n",
+      "\n",
+      "{'year': 2010, 'rating': 8.9, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.', 'studio': 'Warner Bros'}\n",
+      "\n",
+      "8.6\n"
+     ]
+    }
+   ],
    "source": [
     "print(movies)\n",
     "print( )\n",
@@ -161,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get_function(dosen't give error)\n",
     "movies.get('The Dark knight').get('rating')"
@@ -171,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Inception': {'year': 2010, 'rating': 8.9, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.'}, 'The Dark knight': {'year': 2008, 'rating': 9.0, 'overview': 'Batman vs Joker.'}, 'Interseller': {'year': 2014, 'rating': 8.6, 'overview': \"it's complicated\"}}\n"
+     ]
+    }
+   ],
    "source": [
     "movies['Inception']['rating']=8.9\n",
     "print(movies)"
@@ -181,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Inception': {'year': 2010, 'rating': 8.9, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.', 'studio': 'Warner Bros'}, 'The Dark knight': {'year': 2008, 'rating': 9.0, 'overview': 'Batman vs Joker.'}, 'Interseller': {'year': 2014, 'rating': 8.6, 'overview': \"it's complicated\"}}\n"
+     ]
+    }
+   ],
    "source": [
     "movies['Inception']['studio']='Warner Bros'\n",
     "print(movies)"
@@ -191,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,9 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n"
+     ]
+    }
+   ],
    "source": [
     "#ouput:Jack\n",
     "print(my_dict['name'])"
@@ -222,9 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
    "source": [
     "#output:26\n",
     "print(my_dict.get('age'))"
@@ -232,9 +346,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'address'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\dictionary.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/dictionary.ipynb#ch0000019?line=0'>1</a>\u001b[0m \u001b[39m# trying to access keys which\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/dictionary.ipynb#ch0000019?line=1'>2</a>\u001b[0m \u001b[39m#dosen't exist throws error\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/dictionary.ipynb#ch0000019?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(my_dict[\u001b[39m'\u001b[39;49m\u001b[39maddress\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'address'"
+     ]
+    }
+   ],
    "source": [
     "# trying to access keys which\n",
     "#dosen't exist throws error\n",
@@ -243,9 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "#use get() for key extraction\n",
     "print(my_dict.get('address'))"
@@ -253,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,9 +397,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "{1: 1, 2: 4, 3: 9, 5: 25}\n"
+     ]
+    }
+   ],
    "source": [
     "# remove a particular item,returns its value\n",
     "#output:16\n",
@@ -275,9 +418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 25)\n"
+     ]
+    }
+   ],
    "source": [
     "#remove an arbitary item(key,value)\n",
     "#output(5,25)\n",
@@ -286,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "#remove all items\n",
     "squares.clear()\n",
@@ -304,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,9 +473,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#only keys\n",
     "for i in squares:\n",
@@ -325,9 +496,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "#only values using i as key\n",
     "for i in squares:\n",
@@ -336,9 +519,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n"
+     ]
+    }
+   ],
    "source": [
     "#using items() function to get both key and value\n",
     "for k,v in squares.items():\n",
@@ -347,14 +542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inception {'year': 2010, 'rating': 8.8, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.'}\n",
+      "Inception {'year': 2010, 'rating': 8.9, 'overview': 'A thief ,who steals corporate secrets through a dream-sharing technology.', 'studio': 'Warner Bros'}\n",
       "The Dark knight {'year': 2008, 'rating': 9.0, 'overview': 'Batman vs Joker.'}\n",
       "Interseller {'year': 2014, 'rating': 8.6, 'overview': \"it's complicated\"}\n"
      ]
@@ -367,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -378,9 +573,11 @@
       "----------\n",
       "year => 2010\n",
       "-------\n",
-      "rating => 8.8\n",
+      "rating => 8.9\n",
       "-------\n",
       "overview => A thief ,who steals corporate secrets through a dream-sharing technology.\n",
+      "-------\n",
+      "studio => Warner Bros\n",
       "-------\n",
       "The Dark knight\n",
       "----------\n",
@@ -419,14 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Alan', 'Brian', 'Charles', 'David', 'Eric', 'Frank', 'Erica', 'Alex', 'Eliza'])\n"
+      "dict_keys(['Alan', 'Brian', 'Charles', 'David', 'Eric', 'Frank'])\n"
      ]
     }
    ],
@@ -436,14 +633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values([45, 50, 60, 70, 80, 90, 99, 100, 90])\n"
+      "dict_values([45, 50, 60, 70, 80, 90])\n"
      ]
     }
    ],
@@ -453,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('Alan', 45), ('Brian', 50), ('Charles', 60), ('David', 70), ('Eric', 80), ('Frank', 90), ('Erica', 99), ('Alex', 100), ('Eliza', 90)])\n"
+      "dict_items([('Alan', 45), ('Brian', 50), ('Charles', 60), ('David', 70), ('Eric', 80), ('Frank', 90)])\n"
      ]
     }
    ],
@@ -470,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,27 +677,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#adding multiple items in dictionary\n",
     "marks_dict.update({'Grace':39,'Erica':99,'Alex':100})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 45, 'Brian': 50, 'Charles': 60, 'David': 70, 'Eric': 80, 'Frank': 90, 'Eliza': 90, 'Grace': 39, 'Erica': 99, 'Alex': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "print(marks_dict)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 45, 'Brian': 50, 'Charles': 60, 'David': 70, 'Eric': 80, 'Frank': 90, 'Eliza': 90, 'Erica': 99, 'Alex': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "marks_dict.pop('Grace')\n",
     "print(marks_dict)"
@@ -508,9 +722,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 45, 'Brian': 50, 'Charles': 60, 'David': 70, 'Eric': 80, 'Frank': 90, 'Erica': 99, 'Alex': 100}\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
     "item_dat_was_removed=marks_dict.pop('Eliza')\n",
     "print(marks_dict)\n",
@@ -519,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,18 +751,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "marks_dict.get('Alex','n/a')"
+    "marks_dict.get('Alex','n/a')#when  key not found,it return meassage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n/a'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marks_dict.get('Fred','n/a')"
    ]
