--- a/datastructure1/comprehension.ipynb
+++ b/datastructure1/comprehension.ipynb
@@ -108,20 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 23, 41, 123, 31} <generator object <genexpr> at 0x0000019B796E3A50>\n"
+      "{1, 2, 3, 23, 41, 123, 31} [1, 8, 27, 12167, 68921, 1860867, 29791]\n"
      ]
     }
    ],
    "source": [
-    "x5 = (i ** 3 for i in x)\n",
-    "print(x,x5)\n",
+    "x3 = [i ** 3 for i in x]\n",
+    "print(x,x3)\n",
     "\n"
    ]
   },
